# CLI-Agent

./: .coveragerc  .dockerignore  .env  .env.example  .running-pids.json  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  README.md  celerybeat-schedule.bak  celerybeat-schedule.dir  check_status.ps1  docker-compose.yml  pytest.ini  requirements.txt  start_local.ps1  stop_local.ps1
database/: init.sql
doc/: architecture_v4.1.md  deployment_guide.md  development_plan.md  observability.md  production_checklist.md  security.md
observability/: alerts.yml  prometheus.yml
tests/: conftest.py  test_ai_generation_phase2.py  test_asset_manager_phase3.py  test_auth_unified.py  test_common_sdk.py  test_e2e_tenant_isolation.py  test_ffmpeg_helper.py  test_mcp_gateway.py  test_model_adapters.py  (+19 more)
utils/: ffmpeg_helper.py  pyproject.toml
utils/common_sdk/: __init__.py  auth.py  business_metrics.py  config.py  content_safety.py  exceptions.py  health.py  http_client.py  logger.py  metrics.py  nacos_client.py  registry_config.py  resilience.py  response.py  tracing.py  vault_client.py
utils/common_sdk/middleware/: rate_limit.py
utils/db_clients/: __init__.py  minio.py  mongodb.py  mysql.py  redis.py
utils/model_adapters/: __init__.py  base.py  cost.py  image.py  llm.py  registry.py  tts.py  video.py
utils/mq_clients/: __init__.py  celery_app.py  rabbitmq.py  task_manager.py
utils/platform_connectors/: __init__.py  _playwright.py  base_crawler.py  base_publisher.py  douyin_publisher.py  generic_http_publisher.py  mapper.py  models.py  oauth.py  registry.py
(+111 files in other folders)
